# intentional-walk-server

./: .coveragerc  .flake8  .gitignore  Dockerfile  Makefile  Procfile  Procfile.dev  README.md  docker-compose.override.yml  docker-compose.yml  example.env  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt
.circleci/: config.yml
.github/: dependabot.yaml
client/: eslint.config.js  package-lock.json  package.json  vite.config.js
client/public/: index.html  manifest.json
client/src/: Api.js  App.js  App.jsx  AuthContext.js  AuthContext.jsx  Home.js  Home.jsx  Home.scss  Login.js  Login.jsx  Navbar.js  Navbar.scss  Navigation.js  Navigation.jsx  Navigation.scss  _common.scss  index.js  index.scss  main.jsx  setupProxy.js
client/src/Components/: BarChart.js  BarChart.jsx  ErrorTryAgainLater.js  ErrorTryAgainLater.jsx  Histogram.js  Histogram.jsx  IntensityMap.js  IntensityMap.jsx  Loader.js  Loader.jsx  OrderBy.jsx  Pagination.js  Pagination.jsx
client/src/Users/: UsersExportModal.jsx  UsersList.js  UsersList.jsx  UsersList.scss  UsersRoutes.js  UsersRoutes.jsx
docs/: schema.md
home/: admin.py  models.py  tests.py  urls.py  views.py
home/management/commands/: backfill.py  dedupe.py  herokudump.py  resetdb.py
home/management/modules/: heroku.py  scrubber.py  shared.py
home/migrations/: 0001_initial.py  0002_remove_dailywalk_event_id.py  0003_auto_20200426_0613.py  0004_contest.py  0005_contest_start_promo.py  0006_auto_20200623_2207.py  0007_new_demographic_cols.py  0008_alter_account_gender_race_fk.py  0008_alter_gender_race_fields_setfield.py  0009_contest_start_baseline_date.py  0010_auto_20220321_0407.py  0011_intentionalwalk_walk_time.py  0011_leaderboard.py  0012_merge_0011_intentionalwalk_walk_time_0011_leaderboard.py  0013_auto_20230316_1736.py  0013_weeklygoal.py  0014_device_device_model_device_manufacturer_and_more.py
home/models/: __init__.py  account.py  contest.py  dailywalk.py  destination.py  device.py  intentionalwalk.py  intentionalwalk_destination.py  leaderboard.py  learderboard.py  race.py  weeklygoal.py
home/models/mixins/: privacyprotectedfields.py
home/templatetags/: format_helpers.py
home/tests/: __init__.py
home/utils/: __init__.py  dates.py  generators.py  leaderboard.py
home/views/: __init__.py
scripts/: coverage_html.py  dummydata.py  leaderboard.py
server/: settings.py  settings_local.py  urls.py
server/home/: example.json  models.py  views.py
static/home/: home_plots.js  iw_plots.js  main.css  user_plots.js
viteclient/: index.html  package.json  vite.config.js
viteclient/src/: App.jsx  _common.scss  index.scss
(+123 files in other folders)
