[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13.1"
django = ">=4.2.0,<6.0"
psycopg2 = "^2.9.1"
dj-database-url = "^2.3.0"
python-dotenv = "^1.0.1"
gunicorn = "^23.0.0"
python-dateutil = "^2.8.1"
whitenoise = "^6.8.2"
uuid = "^1.30"
django-postgres-setfield = {git = "https://github.com/benperlman/django-postgres-setfield.git"}
djangorestframework = "^3.14.0"
sentry-sdk = {extras = ["django"], version = "^2.14.0"}

[tool.poetry.group.dev.dependencies]
autoflake = "^2.3.1"
black = "^24.10.0"
coverage = "^5.0.3"
coveralls = "^1.11.1"
faker = "^33.1.0"
flake8 = "^7.1.1"
freezegun = "^1.5.1"
pytest = "^8.3.4"
pytest-django = "^4.9.0"
pytest-libfaketime = "^0.1.3"
libfaketime = "^2.1.0"

[tool.black]
line-length = 79

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
